<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.pedro.rtplibrary.view.OpenGlView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/surfaceView"
        app:keepAspectRatio="true"
        app:aspectRatioMode="adjust"
        app:AAEnabled="false"
        app:numFilters="2"
        app:isFlipHorizontal="false"
        app:isFlipVertical="false"
        />

    <EditText
        android:inputType="textUri"
        android:hint="@string/hint_rtmp"
        android:textColorHint="@android:color/white"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:id="@+id/et_rtp_url"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_start_stop"
        android:textOff="@string/btn_start_push"
        android:textOn="@string/btn_stop_push"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switch_camera"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:text="@string/btn_switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_start_stop"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
